# AuctionRouter

./: .dockerignore  .gitignore  AuctionRouter_PRD.md  Dockerfile  README.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  llm.py  main.py  pipeline.py  prompts.py  schemas.py  security.py  store.py
backend/evals/: dataset.jsonl  run_evals.py
backend/tests/: test_web_heuristic.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccessGate.tsx  AuctionPanel.tsx  BidArcade.tsx  Chat.tsx  Markdown.tsx  MetricsDashboard.tsx  RoutingGraph.tsx  VerificationPanel.tsx  ui.tsx
frontend/lib/: api.ts  types.ts
