[project]
name = "auctionrouter-backend"
version = "0.1.0"
description = "Cost-aware multi-agent LLM orchestrator with auction-based routing and verification-based escalation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langgraph>=0.2.60",
    "motor>=3.5",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
